--- a/package.json
+++ b/package.json
@@ -81,7 +81,11 @@
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.1",
+    "json-loader": "^0.5.4",
+    "style-loader": "^0.18.2"
   },
   "engines": {
     "node": ">= 4.0.0",
