--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "element-ui": "^2.5.4",
+    "iview": "^3.2.2",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
   },
