--- a/packages/vue2-resume/Taskfile.yml
+++ b/packages/vue2-resume/Taskfile.yml
@@ -10,7 +10,8 @@ tasks:
     aliases: ["r", "dev"]
     cmds:
       - echo "环境变量 ${VUE_APP_DEBUG}"
-      - bun run dev
+      - bun run dev # vue2 项目使用 Bun 运行
+      # - yarn run dev
       # - pnpm run dev --trace-warnings
     env:
       NODE_ENV: development
